--- a/src/lib/contents/changelog/2022-07-04.md
+++ b/src/lib/contents/changelog/2022-07-04.md
@@ -19,7 +19,10 @@ TODO: Insert the featured changelog entry here.
 
 <div class="mt-medium">
 
-**Feature** - Roadmap issue: [#XXXX](https://github.com/gitpod-io/gitpod/issues/XXXX) <Badge text="beta" variant="orange" class="ml-1.5" />
+**JetBrains** - Roadmap issue: [#7956](https://github.com/gitpod-io/gitpod/issues/7956) <Badge text="beta" variant="orange" class="ml-1.5" />
+
+- [#10986](https://github.com/gitpod-io/gitpod/pull/10986) - Ports opened by tasks defined in .gitpod.yml are now automatically forwarded in JetBrains IDEs. <Contributors usernames="akosyakov,felladrin" />
+- [#10974](https://github.com/gitpod-io/gitpod/pull/10974) - Respect user settings (proxies, certificates) of JetBrains Gateway while connecting to Gitpod API. <Contributors usernames="akosyakov,felladrin" />
 
 </div>
 
@@ -28,19 +31,14 @@ TODO: Insert the featured changelog entry here.
 - [#11083](https://github.com/gitpod-io/gitpod/pull/11083) - fix the start-workspace flow for when a prebuild got auto-cancelled <Contributors usernames="andrew-farries,geropl,svenefftinge" />
 - [#11074](https://github.com/gitpod-io/gitpod/pull/11074) - fix prebuild permissions <Contributors usernames="andrew-farries,easyCZ,geropl" />
 - [#11072](https://github.com/gitpod-io/gitpod/pull/11072) - [ws-proxy] not use target host when serve workspace port route <Contributors usernames="iQQBot,jenting" />
-- [#10925](https://github.com/gitpod-io/gitpod/pull/10925) - [telemetry] Add new telemetry.data config option for telemetry <Contributors usernames="MrSimonEmms,Pothulapati,corneliusludmann" />
-- [#10986](https://github.com/gitpod-io/gitpod/pull/10986) - Ports opened by tasks defined in .gitpod.yml are now automatically forwarded in JetBrains IDEs. <Contributors usernames="akosyakov,felladrin" />
 - [#11026](https://github.com/gitpod-io/gitpod/pull/11026) - Improve reliability of log streaming for image builds and prebuilds <Contributors usernames="geropl,jldec" />
 - [#11044](https://github.com/gitpod-io/gitpod/pull/11044) - toned down `server` logs <Contributors usernames="easyCZ,geropl" />
 - [#10836](https://github.com/gitpod-io/gitpod/pull/10836) - Provide endpoint that allows retrieving information about the workspace from within the workspace <Contributors usernames="Furisto,MrSimonEmms,akosyakov,aledbf,geropl,mustard-mh,utam0k" />
 - [#10696](https://github.com/gitpod-io/gitpod/pull/10696) - Prebuild status is shown under the logs when starting a workspace. <Contributors usernames="geropl,gtsiolis,jankeromnes,jldec,laushinka" />
 - [#10962](https://github.com/gitpod-io/gitpod/pull/10962) - Outdated prebuilds (i.e. new commits are pushed on a branch) are automatically canceled. This behavior can be disabled in the project's settings. <Contributors usernames="geropl,gtsiolis,jankeromnes,svenefftinge" />
 - [#10882](https://github.com/gitpod-io/gitpod/pull/10882) - fix prebuilds stuck in `queued` indefinitely <Contributors usernames="easyCZ,geropl" />
-- [#11037](https://github.com/gitpod-io/gitpod/pull/11037) - [preview] rename `preview-install` to `local-preview <Contributors usernames="Pothulapati,nandajavarma" />
-- [#10974](https://github.com/gitpod-io/gitpod/pull/10974) - Respect user settings (proxies, certificates) of JetBrains Gateway while connecting to Gitpod API. <Contributors usernames="akosyakov,felladrin" />
 - [#10955](https://github.com/gitpod-io/gitpod/pull/10955) - [experimental] enable the volume snapshot controller when the VolumeSnapshot CRD exists <Contributors usernames="Furisto,MrSimonEmms,Pothulapati,jenting" />
 - [#11001](https://github.com/gitpod-io/gitpod/pull/11001) - [installer]: order the custom envvars <Contributors usernames="MrSimonEmms,corneliusludmann,mads-hartmann" />
-- [#10965](https://github.com/gitpod-io/gitpod/pull/10965) - SSH Gateway will send heartbeat only user explicitly request pty <Contributors usernames="aledbf,iQQBot,mustard-mh" />
 - [#10952](https://github.com/gitpod-io/gitpod/pull/10952) - Update docker compose to v2.6.1 <Contributors usernames="aledbf,utam0k" />
 - [#10727](https://github.com/gitpod-io/gitpod/pull/10727) - fix prebuilds stuck in `queued` indefinitely <Contributors usernames="andrew-farries,geropl" />
 - [#10857](https://github.com/gitpod-io/gitpod/pull/10857) - [installer]: add customization to components <Contributors usernames="Furisto,MrSimonEmms,aledbf,corneliusludmann,csweichel,geropl,mustard-mh" />
